# libhal-rmd

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml  deploy.yml  presubmit.yml
datasheets/: RMD-X Motor Motion Protocol V3.3.doc
demos/: CMakeLists.txt  conanfile.py  conanfile.txt  hardware_map.hpp  main.cpp
demos/applications/: drc.cpp  mc_x.cpp
demos/targets/lpc4074/: initializer.cpp
demos/targets/lpc4078/: initializer.cpp
include/libhal-rmd/: drc.hpp  drc_adaptors.hpp  drc_motor.hpp  drc_rotation_sensor.hpp  drc_servo.hpp  drc_temperature_sensor.hpp  mc_x.hpp  mc_x_adaptors.hpp  mc_x_motor.hpp  mc_x_rotation_sensor.hpp  mc_x_servo.hpp  mc_x_temperature_sensor.hpp
include/librmd/: drc.hpp  mc_x.hpp  x_series.hpp
include/librmdx/: rmd_x.hpp  rmdx.hpp
src/: common.hpp  drc.cpp  drc_adaptors.cpp  drc_constants.hpp  mc_x.cpp  mc_x_adaptors.cpp  mc_x_constants.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
test_package_backup/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  conanfile.py  conanfile.txt  drc.test.cpp  drc_motor.test.cpp  main.test.cpp  mc_x.test.cpp  test.cpp  x_series.test.cpp
